# collatz-conjecture

./: .gitignore  LICENSE  README.md  collatz.spec  main.py  pyproject.toml  requirements.txt
collatz/: __init__.py  analysis.py  core.py  graph_export.py  library.py  visualization.py
collatz_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gui/: __init__.py  app.py  graph_tab.py  inverse_tree_tab.py  parity_tab.py  theme.py
tests/: __init__.py  test_analysis.py  test_api.py  test_cli.py  test_core.py  test_graph_export.py  test_library.py  test_visualization.py
