[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-explorer"
version = "1.1.0"
description = "Interactive explorer for interesting Collatz conjecture sequences"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
collatz-explorer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["collatz*", "gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["collatz"]
omit = ["tests/*", "gui/*"]
